# 2025MORAIContest

./: .gitignore  Lane_Controller.py  Lane_Decision (1).py  Lane_Detector.py  README.md  a.py  ctrl_lane.py  data.py  gang.py  imu.py  lidar.py  m1.py  other2.py  real_lane_controller.py  real_lane_detection.py  test.py  test2,py  test3.py  test4.py  tr.py
exe/: contestrb  nav  ss  teo
licenses/: LICENSE  ackermann_cmd_mux  navigation.txt  racecar.txt  (+3 more)
src/auto_drive_sim/: CMakeLists.txt  package.xml
src/auto_drive_sim/launch/: ctrl.launch  dec.launch  main.launch  per.launch
src/auto_drive_sim/src/drive_controller/: ctrl_motor.py  ctrl_servo.py
src/auto_drive_sim/src/drive_decision/: PIDController.py  PIDctrl2.py  dec_lane_detect.py  dec_main.py  dec_mission_all.py  dec_obstacle_avoid.py  obstacle_avoid.py
src/auto_drive_sim/src/drive_decision/lane/: PIDController.py  dec_lane_amcl.py  dec_lane_curvature.py  dec_lane_distance.py
src/auto_drive_sim/src/drive_decision/zone/: dec_lane_mode_000.py  dec_lane_mode_001.py  dec_lane_mode_002.py  dec_lane_mode_003.py  dec_lane_mode_004.py  dec_mission_mode_000.py  dec_mission_mode_001.py  dec_mission_mode_002.py  dec_mission_mode_003.py  dec_mission_mode_004.py
src/auto_drive_sim/src/drive_perception/: mission_5.py  per_DeadReckoning_gps.py  per_camera.py  per_lidar.py  per_nav.py  per_person.py  per_traffic.py
src/auto_drive_sim/src/drive_perception/camera/: feature_extraction.py  per_camera.py  per_camera_rotary.py  preprocessing.py  sliding_window.py
src/auto_drive_sim/src/utils/: check_timer.py
(+33 files in other folders)
